vs-admin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-vs
spec:
  hosts:
    - nsbackend.sreyo.in
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: admin-service.default.svc.cluster.local
            port:
              number: 1338
